[workspace]
resolver = "3"
members = [
    "println-crash",
    "format-crash",
    "eprintln-crash",
    "output-debug-string-safe",
    "create-thread-safe",
    "early-return-fix",
    "tracing-crash",
    "dll-loader",
]

[workspace.dependencies]
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
